mool/tests/compile/fail/unsupported_returning.stderr
error[E0599]: no method named `returning` found for struct `QueryScope` in the current scope
  --> tests/compile/fail/unsupported_returning.rs:12:30
   |
12 |     let _ = db::from(&posts).returning::<Post>();
   |                              ^^^^^^^^^ method not found in `QueryScope`
